--- a/index.html
+++ b/index.html
@@ -8,9 +8,11 @@
   </head>
 
   <body>
-    <h3>AFTERPAY & ZIP PAY AVAILABLE</h3>
+   
     <!-- header section start -->
     <header class="site-header" role="banner">
+             <h3>AFTERPAY & ZIP PAY AVAILABLE</h3>
+
       <div class="header-row">
         <div class="header-left">
           <button class="icon-btn" aria-label="Open menu">
@@ -208,23 +210,96 @@
     <!-- home section end -->
     <!-- content section start -->
     <div class="content-section">
-      <h1>Delivery Rules and Restrictions</h1>
-      <span>Updated 7 months ago</span>
-      <p>
-        Delivery costs shall be paid by you and are indicated in your cart when
-        you check out. There are no delivery costs for purchases over $135.
-        There will be a $5 AUD delivery cost for purchases under $135. 
-      </p>
-      <p>
-        Orders are processed for delivery on working days only (Monday through
-        Friday, excluding public holidays.) Orders placed on Saturday and Sunday
-        will be processed the following work day. We are unable to process
-        orders to a P.O Box.
-      </p>
-      <p>Below are the shipping timeframes:</p>
-      <p>Standard Shipping 3-5 Business days.</p>
-      <p></p>
-
+      <div class="content">
+        <h1>Delivery Rules and Restrictions</h1>
+        <span>Updated 7 months ago</span>
+        <p>
+          Delivery costs shall be paid by you and are indicated in your cart
+          when you check out. There are no delivery costs for purchases over
+          $135. There will be a $5 AUD delivery cost for purchases under $135. 
+        </p>
+        <p>
+          Orders are processed for delivery on working days only (Monday through
+          Friday, excluding public holidays.) Orders placed on Saturday and
+          Sunday will be processed the following work day. We are unable to
+          process orders to a P.O Box.
+        </p>
+        <p class="bold-text"><strong>Below are the shipping timeframes:</strong></p>
+        <p>Standard Shipping 3-5 Business days.</p>
+        <p>
+          Express Shipping within Australia Via Auspost is 1-3 Business days. 
+        </p>
+        <p>
+          *Please note , express shipping applies only to the transit time after
+          your order has been dispatched. Standard processing times still apply
+          to all orders before they are shipped.
+        </p>
+        <p>
+          We will deliver your products to the delivery address in accordance
+          with the delivery option selected by you during the order process. If
+          the order has already been processed, we may not be able to fulfil
+          your request.
+        </p>
+        <p>
+          <strong
+            >During peak sale periods, shipping times may be longer than usual.
+            Please expect a delay during this time. We appreciate your patience
+            and understanding!</strong
+          >
+        </p>
+        <p>
+          WHO IS ELIJAH does not accept any liability whatsoever for delayed
+          delivery caused by an third party. If you have not received your order
+          within 21 days, please email us at info@whoiselijah.com.au
+        </p>
+        <p>
+          We may leave the products at your premises. Risk in the products will
+          pass to you as soon as they are delivered to the delivery address
+          provided in your order.
+        </p>
+        <p>
+          We will take reasonable care to deliver to the address given. However,
+          we will not be liable for non-delivery or mis-delivery as a result of
+          your incorrect data entry.
+        </p>
+        <p>
+          Order places within <strong>Australia</strong> are dispatched from
+          Sydney.
+        </p>
+      </div>
+      <div class="liked-section">
+        <span>Was this article helpful? </span>
+        <div class="like">
+          <svg
+            xmlns="http://www.w3.org/2000/svg"
+            width="21"
+            height="18"
+            viewBox="0 0 21 18"
+            fill="none"
+          >
+            <path
+              d="M11.9281 0.946459L7.31146 5.56312C7.00313 5.87146 6.82813 6.29646 6.82813 6.73812V15.0631C6.82813 15.9798 7.57813 16.7298 8.49479 16.7298H15.9948C16.6614 16.7298 17.2614 16.3298 17.5281 15.7215L20.2448 9.37979C20.9448 7.72979 19.7364 5.89646 17.9448 5.89646H13.2364L14.0281 2.07979C14.1114 1.66312 13.9864 1.23812 13.6864 0.938126C13.1948 0.454792 12.4114 0.454792 11.9281 0.946459ZM3.49479 16.7298C4.41146 16.7298 5.16146 15.9798 5.16146 15.0631V8.39646C5.16146 7.47979 4.41146 6.72979 3.49479 6.72979C2.57813 6.72979 1.82812 7.47979 1.82812 8.39646V15.0631C1.82812 15.9798 2.57813 16.7298 3.49479 16.7298Z"
+              fill="#161616"
+            />
+          </svg>
+          <span>Yes</span>
+        </div>
+        <div class="dislike">
+          <svg
+            xmlns="http://www.w3.org/2000/svg"
+            width="21"
+            height="18"
+            viewBox="0 0 21 18"
+            fill="none"
+          >
+            <path
+              d="M10.0687 16.5133L14.6771 11.8967C14.9854 11.5883 15.1604 11.1633 15.1604 10.7217V2.39665C15.1604 1.47998 14.4104 0.72998 13.4937 0.72998H6.00203C5.33536 0.72998 4.73536 1.12998 4.47703 1.73831L1.76037 8.07998C1.05203 9.72998 2.26036 11.5633 4.05203 11.5633H8.76036L7.9687 15.38C7.88536 15.7967 8.01036 16.2217 8.31036 16.5217C8.80203 17.005 9.58536 17.005 10.0687 16.5133ZM18.5021 0.72998C17.5854 0.72998 16.8354 1.47998 16.8354 2.39665V9.06331C16.8354 9.97998 17.5854 10.73 18.5021 10.73C19.4187 10.73 20.1687 9.97998 20.1687 9.06331V2.39665C20.1687 1.47998 19.4187 0.72998 18.5021 0.72998Z"
+              fill="#161616"
+            />
+          </svg>
+          <span>No</span>
+        </div>
+      </div>
     </div>
   </body>
 </html>
