--- a/index.html
+++ b/index.html
@@ -130,9 +130,10 @@
         </div>
       </div>
     </header>
+    
     <!-- header section end -->
     <!-- home section start -->
-    <div class="home-section">
+    <section class="home-section ">
       <div class="all-articales">
         <svg
           xmlns="http://www.w3.org/2000/svg"
@@ -205,10 +206,10 @@
         </svg>
         <input type="search" placeholder="Search" />
       </div>
-    </div>
+    </section>
     <!-- home section end -->
     <!-- content section start -->
-    <div class="content-section">
+    <section class="content-section">
       <div class="content">
         <h1>Delivery Rules and Restrictions</h1>
         <span>Updated 7 months ago</span>
@@ -301,16 +302,16 @@
           <span>No</span>
         </div>
       </div>
-    </div>
+    </section>
     <!-- content section end -->
     <!-- slider section start -->
-    <div class="slider-section">
+    <section class="slider-section">
       <img src="images/VOGUE.png" alt="VOGUE" />
       <img src="images/Popsugar.png" alt="Popsugar" />
       <img src="images/Beauty crew.png" alt="Beauty" />
       <img src="images/hyoebeast.png" alt="hyoebeast" />
       <img src="images/new york post.png" alt="new" />
-    </div>
+    </section>
     <!-- slider section end -->
     <!-- footer section start -->
     <footer>
@@ -334,7 +335,7 @@
         </div>
       </div>
       <div class="email-section">
-        <h3>LETS BE EXCLUSIVE.</h3>
+        <span>LETS BE EXCLUSIVE.</span>
         <div>
           <input type="email" placeholder="EMAIL" />
           <svg
@@ -416,11 +417,11 @@
         ></a>
       </div>
       <div class="copyright">
-        <h3><strong>WHO IS ELIJAH</strong></h3>
-        <span>&copy;2025 WHO IS ELIJAH</span>
+        <span><strong>WHO IS ELIJAH</strong></span>
+        <span class="sm">&copy;2025 WHO IS ELIJAH</span>
       </div>
     </footer>
-    <div class="payment-section">
+    <section class="payment-section">
       <svg
         xmlns="http://www.w3.org/2000/svg"
         width="39"
@@ -663,6 +664,6 @@
           fill="#142688"
         />
       </svg>
-    </div>
+    </section>
   </body>
 </html>
